input/styles/screen.css
/* page layout */

  /* the web page itself */
  body
  {
    margin           : 0;
    margin-left      : auto;
    margin-right     : auto;
    padding          : 0.5em;
    max-width        : 51em; /* 36em + 15em (see #content dimensions below) */
  }

  /* the main content of the web page */
  #content
  {
    max-width        : 36em;
    margin-right     : 15em;
  }

  /* the 'links' parameter in config/blog.yaml */
  #links
  {
    float            : right;
    max-width        : 12em;
    margin           : 0;
  }

  /* the menu item corresponding to the current web page */
  #links .current a
  {
    color            : red;
  }


/* styles for config/html.erb */

  /* the banner containing blog name and description */
  #header
  {
    margin-bottom    : 3em;
  }

  /* the name of your blog */
  #header .name a:link,
  #header .name a:visited
  {
    color            : inherit;
    .color           : #000000; /* for IE6 and IE7 */
  }

  /* the description of your blog */
  #header .info
  {
    font-style       : italic;
  }

  /* the search form */
  #search
  {
    float            : right;
    margin-top       : 2em;
  }

  /* the search box in which the user types their query */
  #search-query
  {
    width: 10em;
  }

  /* an area for search results */
  #search-output,
  #search-error
  {
    border           : thin solid #FF0000;
    background-color : #FFFAFA;
    padding          : 1em;
  }

  /* the main content of the web page */
  #content
  {
  }

  #footer
  {
    margin-top       : 5em;
    text-align       : center;
  }


/* styles for config/entry.erb */

  .entry
  {
    margin-bottom    : 7em;
  }

  /* title of the blog entry */
  .entry .name
  {
    border-bottom    : 1px solid #DCDCDC;
    padding-bottom   : 0.25em;
    font-size        : 1.6em;
  }

  .entry .name a:link,
  .entry .name a:visited
  {
    text-decoration: none;
  }

  /* contains links to the next/previous blog entry */
  .entry .menu
  {
    float            : right;
    margin-left      : 1em;
  }

  /* table of contents */
  .entry .toc
  {
    margin-bottom    : 2em;
    background-color : #FAFAFA;
    padding          : 1em;
  }

  .entry .toc ul
  {
    margin-top       : 0;
  }

  /* content of the blog entry */
  .entry .text
  {
    margin-left      : 1em;
  }

  .entry .text a
  {
    text-decoration  : underline;
  }

  .entry .text img
  {
    margin           : 1em;
  }

  /* the "Read more..." link */
  .entry .more a
  {
    float            : right;
    margin-top       : 0.5em;
    margin-left      : 2em;
    margin-bottom    : 2em;
  }

  /* information about the blog entry */
  .entry .info
  {
    padding-top      : 0.5em;
    font-size        : small;
    padding-left     : 0;
    _margin-left     : 0; /* for IE6 */
  }

  .entry .info li
  {
    list-style-type  : none;
    margin-left      : 0;
  }


/* additional styles for config/entry.erb when @solo is true
  (i.e.  when the entry is displayed alone, on its own page) */

  .entry-solo
  {
  }

  .entry-solo .text
  {
    margin-left      : 0;
  }

  .entry-solo .info
  {
    margin-top       : 2em;
    border-top       : 1px solid #808080;
  }


/* styles for config/listing.erb */

  .listing
  {
  }

  .listing > .name
  {
    font-size        : 1.6em;
  }


/* styles for config/section.erb */

  .section
  {
  }

  .section > .name
  {
    font-size        : 1.6em;
    margin-bottom    : 2em;
  }

  /* contains links to the next/previous section */
  .section > .menu
  {
    float            : right;
  }


/* styles for config/chapter.erb */

  .chapter
  {
  }

  .chapter > .name
  {
    font-size        : 1.6em;
  }

  /* tag cloud */
  .chapter .cloud
  {
    padding          : 0;
    text-align       : center;
    max-width        : 70%;
    _width           : 70%; /* for IE6 */
    margin-left      : auto;
    margin-right     : auto;
  }

  .chapter .cloud li
  {
    display          : inline;
    padding-right    : 10px;
  }


/* headings */

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  th
  {
    font-weight      : lighter;
  }

  .entry .text h1,
  .entry .text h2,
  .entry .text h3,
  .entry .text h4,
  .entry .text h5,
  .entry .text h6
  {
    margin-top       : 2.5em;
    line-height      : 1.25em;
  }

  .entry .text h1
  {
    font-size        : 2.0em;
  }

  .entry .text h2
  {
    font-size        : 1.8em;
  }

  .entry .text h3
  {
    font-size        : 1.6em;
  }

  .entry .text h4
  {
    font-size        : 1.4em;
  }

  .entry .text h5
  {
    font-size        : 1.2em;
  }

  .entry .text h6
  {
    font-size        : 1.0em;
  }


/* hyperlinks */

  a
  {
    color            : #0000FF;
    text-decoration  : none;
  }

  a:visited
  {
    color            : #4B0082;
  }

  a:hover
  {
    color            : #FF0000;
    text-decoration  : underline;
  }

  a:target
  {
    color            : #FF0000;
    text-decoration  : underline;
  }

  /* the LaTeX-style heading number that links back to the table of contents */
  a.toc-link:link,
  a.toc-link:visited
  {
    text-decoration  : none;
  }


/* source code */

  tt,
  code,
  pre
  {
    font-family      : Consolas, "Lucida Console", monospace;
  }

  tt
  {
    font-weight      : bold;
    color            : #A52A2A;
    background-color : #FFFAF0;
  }

  /* output of syntax colorizer */
  .code
  {
    background-color : #FFFFF0;
  }

  pre
  {
    cursor           : text;
    line-height      : normal;
    border           : 1px dashed #C0C0C0;
    background-color : #F5FFDF;
    padding          : 1em;
    overflow         : hidden;
    _overflow        : auto; /* for IE6 */
  }

  pre:hover
  {
    border           : 1px solid #000000;
    width            : 1000%;
    position         : relative;
    z-index          : 1;
  }


/* tables */

  th,
  td
  {
    padding          : 1em;
    border           : 1px solid #C0C0C0;
  }

  th
  {
    background-color : #F5F5F5;
  }

  table
  {
    margin-left      : auto;
    margin-right     : auto;
  }


/* emphasis */

  body
  {
    color            : #000000;
    background-color : #FFFFFF;
    line-height      : 1.5em;
    font-family      : Calibri, Verdana, sans-serif;
  }

  em,
  blockquote
  {
    font-family      : Cambria, Georgia, serif;
  }

  blockquote
  {
    margin           : 1em;
    border           : 5px dotted #C0C0C0;
    padding          : 1em;
    color            : #444;
  }

  hr
  {
    color            : #FF0000; /* for IE6 */
    background-color : #FF0000; /* for Firefox */
  }

  big
  {
    font-size        : larger;
  }

  table
  {
    margin-left      : auto;
    margin-right     : auto;
  }


/* fix annoyances */

  a img
  {
    border           : none;
  }

  /* reduce indentation of list items */
  #links ul,
  .entry .toc ul
  {
    padding-left     : 1em; /* for Firefox */

    .margin-left     : 0.75em; /* for IE6 and IE7 */
    .padding-left    : 0.25em;

    _margin-left     : 0.25em; /* override for IE6 only */
    _padding-left    : 1em;
  }

  /* hide redundant @title because it is indicated by #links .current */
  .listing > .name,
  .chapter > .name
  {
    display          : none;
  }

  .entry .toc ul
  {
    padding-bottom   : 0.75em;
  }

  #links ul
  {
    margin-bottom: 1em;
  }

